# samurai

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  OLLAMA_SETUP.md  PROJECT_REVIEW.md  QUICK_REFERENCE.md  README.md  docker-compose.yml
.kiro/specs/ai-agent-framework/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
agent/: Cargo.toml
agent/src/: lib.rs
cli/: Cargo.toml
cli/src/: agent.rs  args.rs  main.rs  repl.rs  single.rs
communication/: Cargo.toml
communication/src/: client.rs  lib.rs  retry.rs
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  message.rs
examples/: README.md  chatbot.rs  file_manager.rs  ollama_chatbot.rs  research.rs
examples/configs/: anthropic.yaml  chatbot.yaml  file_manager.yaml  ollama.yaml  research.yaml  simple.yaml
executor/: Cargo.toml
executor/src/: executor.rs  lib.rs
guardrails/: Cargo.toml
guardrails/src/: file_path.rs  guardrail.rs  lib.rs  rate_limit.rs  registry.rs
llm/: Cargo.toml
llm/src/: factory.rs  lib.rs  provider.rs
llm/src/anthropic/: mod.rs  types.rs
llm/src/ollama/: mod.rs  types.rs
llm/src/openai/: mod.rs  types.rs
memory/: Cargo.toml
memory/src/: history.rs  in_memory.rs  lib.rs  store.rs  token_counter.rs
planner/: Cargo.toml
planner/src/: lib.rs  planner.rs  types.rs
rules/: Cargo.toml
rules/src/: context.rs  engine.rs  lib.rs  response_length.rs  rule.rs  tone.rs
scripts/: README.md  setup-ollama.sh
tests/: agent_flow.rs  agent_integration.rs  anthropic_integration.rs  guardrails_integration.rs  ollama_integration.rs  openai_integration.rs  tool_execution.rs
tests/common/: mod.rs
tools/: Cargo.toml
tools/src/: calculator.rs  file_reader.rs  lib.rs  registry.rs  tool.rs  web_search.rs
