[workspace]
members = [ "communication", "config","core", "executor", "guardrails", "llm", "memory", "planner", "tools"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.48", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
