[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../core" }
planner = { path = "../planner" }
executor = { path = "../executor" }
memory = { path = "../memory" }
guardrails = { path = "../guardrails" }
llm = { path = "../llm" }
tools = { path = "../tools" }
config = { path = "../config" }
async-trait = "0.1"
thiserror = { workspace = true }
serde_json.workspace = true
