[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../core" }
llm = { path = "../llm" }
memory = { path = "../memory" }
tools = { path = "../tools" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
tokio = { workspace = true }
